; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_plcp_get_ofdmrate.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_plcp_get_ofdmrate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwn_mac = type { %struct.bwn_softc* }
%struct.bwn_softc = type { i32 }
%struct.bwn_plcp6 = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@.str = private unnamed_addr constant [18 x i8] c"not support APHY\0A\00", align 1
@BWN_OFDM_RATE_6MB = common dso_local global i32 0, align 4
@BWN_OFDM_RATE_9MB = common dso_local global i32 0, align 4
@BWN_OFDM_RATE_12MB = common dso_local global i32 0, align 4
@BWN_OFDM_RATE_18MB = common dso_local global i32 0, align 4
@BWN_OFDM_RATE_24MB = common dso_local global i32 0, align 4
@BWN_OFDM_RATE_36MB = common dso_local global i32 0, align 4
@BWN_OFDM_RATE_48MB = common dso_local global i32 0, align 4
@BWN_OFDM_RATE_54MB = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [24 x i8] c"incorrect OFDM rate %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bwn_mac*, %struct.bwn_plcp6*, i64)* @bwn_plcp_get_ofdmrate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bwn_plcp_get_ofdmrate(%struct.bwn_mac* %0, %struct.bwn_plcp6* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.bwn_mac*, align 8
  %6 = alloca %struct.bwn_plcp6*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.bwn_softc*, align 8
  store %struct.bwn_mac* %0, %struct.bwn_mac** %5, align 8
  store %struct.bwn_plcp6* %1, %struct.bwn_plcp6** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load %struct.bwn_mac*, %struct.bwn_mac** %5, align 8
  %10 = getelementptr inbounds %struct.bwn_mac, %struct.bwn_mac* %9, i32 0, i32 0
  %11 = load %struct.bwn_softc*, %struct.bwn_softc** %10, align 8
  store %struct.bwn_softc* %11, %struct.bwn_softc** %8, align 8
  %12 = load i64, i64* %7, align 8
  %13 = icmp eq i64 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @KASSERT(i32 %14, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %16 = load %struct.bwn_plcp6*, %struct.bwn_plcp6** %6, align 8
  %17 = getelementptr inbounds %struct.bwn_plcp6, %struct.bwn_plcp6* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 0
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, 15
  switch i32 %22, label %39 [
    i32 11, label %23
    i32 15, label %25
    i32 10, label %27
    i32 14, label %29
    i32 9, label %31
    i32 13, label %33
    i32 8, label %35
    i32 12, label %37
  ]

23:                                               ; preds = %3
  %24 = load i32, i32* @BWN_OFDM_RATE_6MB, align 4
  store i32 %24, i32* %4, align 4
  br label %51

25:                                               ; preds = %3
  %26 = load i32, i32* @BWN_OFDM_RATE_9MB, align 4
  store i32 %26, i32* %4, align 4
  br label %51

27:                                               ; preds = %3
  %28 = load i32, i32* @BWN_OFDM_RATE_12MB, align 4
  store i32 %28, i32* %4, align 4
  br label %51

29:                                               ; preds = %3
  %30 = load i32, i32* @BWN_OFDM_RATE_18MB, align 4
  store i32 %30, i32* %4, align 4
  br label %51

31:                                               ; preds = %3
  %32 = load i32, i32* @BWN_OFDM_RATE_24MB, align 4
  store i32 %32, i32* %4, align 4
  br label %51

33:                                               ; preds = %3
  %34 = load i32, i32* @BWN_OFDM_RATE_36MB, align 4
  store i32 %34, i32* %4, align 4
  br label %51

35:                                               ; preds = %3
  %36 = load i32, i32* @BWN_OFDM_RATE_48MB, align 4
  store i32 %36, i32* %4, align 4
  br label %51

37:                                               ; preds = %3
  %38 = load i32, i32* @BWN_OFDM_RATE_54MB, align 4
  store i32 %38, i32* %4, align 4
  br label %51

39:                                               ; preds = %3
  %40 = load %struct.bwn_softc*, %struct.bwn_softc** %8, align 8
  %41 = getelementptr inbounds %struct.bwn_softc, %struct.bwn_softc* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = load %struct.bwn_plcp6*, %struct.bwn_plcp6** %6, align 8
  %44 = getelementptr inbounds %struct.bwn_plcp6, %struct.bwn_plcp6* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i32 0, i32 0
  %46 = load i32*, i32** %45, align 8
  %47 = getelementptr inbounds i32, i32* %46, i64 0
  %48 = load i32, i32* %47, align 4
  %49 = and i32 %48, 15
  %50 = call i32 @device_printf(i32 %42, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i32 %49)
  store i32 -1, i32* %4, align 4
  br label %51

51:                                               ; preds = %39, %37, %35, %33, %31, %29, %27, %25, %23
  %52 = load i32, i32* %4, align 4
  ret i32 %52
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @device_printf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
